# difference-rs

./: Cargo.toml  Examples.md  README.md  _typos.toml
.github/workflows/: rust.yaml
examples/: github-style.rs  line-by-line.rs  underline-uri.rs  underline-words.rs
src/: display.rs  lcs.rs  lib.rs  main.rs  merge.rs  multi.rs
tests/: quickcheck.rs
