[package]
name = "difference-rs"
version = "3.0.0"
authors = ["Julia Naomi <jnboeira@outlook.com>", "Johann Hofmann <mail@johann-hofmann.com>"]
description = "A Rust text diffing and assertion library."
repository = "https://github.com/naomijub/difference_rs"
readme = "README.md"
categories = ["text-processing", "development-tools::testing"]
keywords = ["diff", "text", "compare", "changes", "assert"]
license = "MIT"
edition = "2021"

[[bin]]
name = "difference_rs"
path = "src/main.rs"
doc = false

[features]
default = []
bin = ["getopts"]

[dependencies]
getopts = {version = "0.2", optional = true}

[dev-dependencies]
term = "0.6"
quickcheck = "0.6"
