[package]
name = "difference-rs"
version = "3.2.0"
authors = ["Julia Naomi <jnboeira@outlook.com>", "Johann Hofmann <mail@johann-hofmann.com>"]
description = "A Rust text diffing and assertion library."
repository = "https://github.com/naomijub/difference-rs"
documentation = "https://docs.rs/difference_rs/latest/difference_rs/"
readme = "README.md"
categories = ["text-processing", "development-tools::testing"]
keywords = ["diff", "text", "compare", "changes", "assert"]
license = "MIT"
edition = "2024"

[[bin]]
name = "difference_rs"
path = "src/main.rs"
doc = false

[features]
default = []
bin = ["getopts"]
serde = ["dep:serde"]

[dependencies]
getopts = {version = "0.2", optional = true}
serde = { version = "1.0", features = ["derive"], optional = true}

[dev-dependencies]
term = "0.7"
quickcheck = "1.0"
serde_json = "1.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
missing_docs = "deny"

[lints.clippy]
pedantic = { level = "deny", priority = 5 }
nursery = { level = "deny", priority = 4 }
all = { level = "deny", priority = 12 }
equatable_if_let = { level = "allow", priority = 11 }
similar_names = { level = "allow", priority = 11 }
use_self = { level = "allow", priority = 11 }
wildcard_imports = { level = "deny", priority = 11 }
missing_const_for_fn = { level = "deny" }
option_if_let_else = { level = "deny" }
or_fun_call = { level = "deny" }